# FrictionForceSimulator

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  render.hpp  setup_camera.hpp  setup_openGL.cpp  setup_openGL.hpp
src/shaders/: fragment_shader_gear.glsl  vertex_shader_gear.glsl
textures_n_objects/: arrow.mtl  axis.mtl  cube.mtl  more_textures_map.mtl  porsche.mtl  porsche911.mtl  semi_map.mtl
